# ordinaut

./: .dockerignore  .gitignore  AGENTS.md  API.md  API_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_MCP_EXTENSION_ANALYSIS.md  CONFIGURATION_CUSTOMIZATION_GUIDE.md  CTO_DEPLOYMENT_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCS_README.md  FINAL_VALIDATION_REPORT.md  INTEGRATION_COMPLETE.md  INTEGRATION_EXAMPLES.md  LICENSE  LINUS_ANALYSIS.md  QWEN.md  README-EXTENSIONS.md  README.md  REAL_BUSINESS_SCENARIOS.md  RRULE_IMPLEMENTATION_STATUS.md  SEMANTIC_RELEASE_IMPLEMENTATION.md  TEST_COVERAGE_REPORT.md  TROUBLESHOOTING.md  debug_async.py  debug_health.py  debug_health_minimal_method.py  debug_health_simple.py  demo_rruler.py  mkdocs.yml  plan.md  pyproject.toml  pytest.ini  requirements-arm.txt  requirements-docs.txt  requirements.txt  run_api.py  security_fixes_demo.py  (+1 more)
.claude/agents/: api-craftsman.md  codebase-analyzer.md  database-architect.md  documentation-master.md  mcp-protocol-expert.md  observability-oracle.md  rrule-wizard.md  scheduler-genius.md  testing-architect.md  worker-system-specialist.md
.github/workflows/: docs.yml  release.yml
api/: AGENTS.md  CLAUDE.md  __init__.py  auth.py  dependencies.py  main.py  models.py  schemas.py  security.py
api/routes/: AGENTS.md  CLAUDE.md  __init__.py  agents.py  events.py  runs.py  tasks.py
assets/: CLAUDE.md
catalogs/: AGENTS.md  CLAUDE.md  tools.json
docs/: README.md  index.md  index.ro.md  index.ru.md
docs/api/: agents.md  agents.ro.md  agents.ru.md  api_reference.md  api_reference.ro.md  api_reference.ru.md  authentication.md  authentication.ro.md  authentication.ru.md  events.md  events.ro.md  events.ru.md  extensions.md  extensions.ro.md  extensions.ru.md  health.md  health.ro.md  health.ru.md  runs.md  runs.ro.md  runs.ru.md  tasks.md  tasks.ro.md  tasks.ru.md
docs/assets/: CLAUDE.md
docs/getting-started/: installation.md  installation.ro.md  installation.ru.md  overview.md  overview.ro.md  overview.ru.md  quick-start.md  quick-start.ro.md  quick-start.ru.md
docs/guides/: concepts.md  concepts.ro.md  concepts.ru.md  development.md  development.ro.md  development.ru.md  extensions.md  extensions.ro.md  extensions.ru.md  pipelines.md  pipelines.ro.md  pipelines.ru.md  scheduling.md  scheduling.ro.md  scheduling.ru.md
docs/operations/: deployment.md  deployment.ro.md  deployment.ru.md  monitoring.md  monitoring.ro.md  monitoring.ru.md  troubleshooting.md  troubleshooting.ro.md  troubleshooting.ru.md
docs/project/: changelog.ro.md  final_validation_report.md  final_validation_report.ro.md  final_validation_report.ru.md  production_readiness_report.md  production_readiness_report.ro.md  production_readiness_report.ru.md  security_audit_report.md  security_audit_report.ro.md  security_audit_report.ru.md  status_reports.ru.md  test_verification_report.md
engine/: AGENTS.md  CLAUDE.md  __init__.py  executor.py  mcp_client.py  registry.py  rruler.py  template.py
extensions/events_demo/: extension.json
extensions/webui/: extension.json  extension.py
extensions/webui/static/: index.html
migrations/: CLAUDE.md  version_0001.sql
observability/: AGENTS.md  CLAUDE.md  README.md  __init__.py  alerts.py  health.py  logging.py  metrics.py  requirements.txt
ops/: .env.example  BACKUP_PROCEDURES.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DISASTER_RECOVERY.md  Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker  INCIDENT_RESPONSE.md  MONITORING_PLAYBOOK.md  Makefile  PRODUCTION_RUNBOOK.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.ghcr.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  healthcheck.sh  smoke.sh  start.sh
ops/alertmanager/: alertmanager.yml
ops/grafana/dashboards/: orchestrator-overview.json  system-overview.json
ops/grafana/provisioning/dashboards/: dashboards.yml
ops/grafana/provisioning/datasources/: prometheus.yml
ops/loki/: loki.yml
ops/prometheus/: alert_rules.yml  prometheus.yml
ops/promtail/: promtail.yml
ordinaut/api/: main.py
ordinaut/engine/: registry.py
ordinaut/extensions/events_demo/: extension.py
ordinaut/extensions/mcp_http/: extension.json  extension.py
ordinaut/extensions/observability/: extension.json  extension.py
ordinaut/plugins/: __init__.py  background.py  base.py  events.py  loader.py  schema.py
payloads/: CLAUDE.md  morning_briefing.json
scheduler/: AGENTS.md  CLAUDE.md  __init__.py  tick.py
scripts/: CLAUDE.md  final_validation.py  start_local.py  start_system.py  test_observability.py  test_scheduler_logic.py  test_system.py  validate_scheduler.py
tests/: AGENTS.md  CLAUDE.md  comprehensive_test_suite.py  conftest.py  conftest_full.py  test_api.py  test_api_simple.py  test_chaos.py  test_cross_service_integration.py  test_env.py  test_integration.py  test_load_validation.py  test_performance.py  test_pipeline_engine.py  test_pipeline_execution.py  test_production_load_simple.py  test_production_validation.py  test_rruler.py  test_rruler_integration.py  test_scheduler.py  test_scheduler_comprehensive.py  test_simple_framework.py  test_worker_utils.py  test_workers.py
tests/chaos/: test_fault_tolerance.py
tests/integration/: AGENTS.md  CLAUDE.md  test_end_to_end_workflows.py  test_system_integration.py
tests/load/: CLAUDE.md  test_comprehensive_performance.py  test_performance_benchmarks.py
tests/unit/: CLAUDE.md  test_api_endpoints.py  test_rrule_processing.py  test_template_rendering.py  test_worker_concurrency.py
workers/: AGENTS.md  CLAUDE.md  __init__.py  cli.py  config.py  coordinator.py  runner.py
